<resources>
    <string name="app_name">MovieTMDB</string>
    <string name="list_tv_now_playing">현재 상영중</string>
    <string name="list_tv_coming_soon">개봉 예정</string>
    <string name="list_tv_popular">인기</string>
    <string name="list_tv_high_rated">높은 평점</string>



    <string name="detail_tv_adult">adult</string>
    <string name="detail_tv_overview">개요</string>
    <string name="detail_tv_credits">주요 출연진</string>
    <string name="detail_tv_review">리뷰</string>
    <string name="detail_tv_release_date">%s 발매</string>
    <string name="error_info">예기치 못한 오류가 발생하였습니다. 다시 시도해주세요.</string>

</resources>